--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@
 @import "./blocks/about";
 @import "./blocks/consult";
 @import "./blocks/consult-form";
+@import "./blocks/leasing-form";
 @import "./blocks/leasing";
 @import "./blocks/leasing-banks";
 @import "./blocks/swiper-products";
@@ -80,7 +81,9 @@
 @import "./blocks/toggle-radio";
 @import "./blocks/section-card";
 @import "./blocks/form-modal";
+@import "./blocks/form-leasing";
 @import "./blocks/modal-form-block";
+@import "./blocks/modal-leasing-form-block";
 @import "./blocks/wide-card";
 @import "./blocks/properties-wide-card";
 @import "./blocks/leasing-banner-img";
